--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Glicemia Notes</title>
         <!-- Bootstrap para emergência v.5.3.3 -->
-        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
-        <link rel="stylesheet" href="./style/bootstrap_import.css">
+
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous">
+        <script
+            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+            crossorigin="anonymous"></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+            integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+            crossorigin="anonymous"></script>
         <link rel="stylesheet" href="./style/style_proprio.css">
 
     </head>
@@ -19,14 +31,104 @@
         </div>
         <div class="main_form_login_reset">
 
+            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link active" id="pills-home-tab"
+                        data-bs-toggle="pill" data-bs-target="#pills-home"
+                        type="button" role="tab" aria-controls="pills-home"
+                        aria-selected="true">Login</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="pills-profile-tab"
+                        data-bs-toggle="pill" data-bs-target="#pills-profile"
+                        type="button" role="tab" aria-controls="pills-profile"
+                        aria-selected="false">Cadastro</button>
+                </li>
+
+                <li class="nav-item" role="presentation"></li>
+                <button class="nav-link" id="pills-reset-tab"
+                    data-bs-toggle="pill"
+                    data-bs-target="#pills-contact" type="button" role="tab"
+                    aria-controls="pills-contact"
+                    aria-selected="false">Recuperar Senha</button>
+            </li>
+
+        </ul>
+
+    </div>
+    <!-- ------------ Conteúdos das tabelas------------->
+
+    <div class="tab-content" id="pills-tabContent">
+
+        <!-- Login -->
+        <div class="tab-pane fade show active" id="pills-home"
+            role="tabpanel" aria-labelledby="pills-home-tab"
+            tabindex="0">
             <form>
                 <div class="mb-3">
                     <label for="email"
                         class="form-label">Email</label>
                     <input type="email" class="form-control"
                         id="email" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text">Não compartilharemos
+                    <div id="emailHelp" class="form-text">Não
+                        compartilharemos
                         seu email sem sua autorização.</div>
+                </div>
+
+                <div class="mb-3">
+                    <label for="password"
+                        class="form-label">Senha</label>
+                    <input type="password" class="form-control"
+                        id="password">
+                </div>
+
+                <div class="mb-3 form-check">
+                    <input type="checkbox"
+                        class="form-check-input text-warning"
+                        id="exampleCheck1">
+                    <label class="form-check-label"
+                        for="exampleCheck1">Manter
+                        conectado?</label>
+                </div>
+
+                <div class="d-flex justify-content-center pb-2">
+
+                    <button type="button"
+                        class="btn btn-primary btn-lg" style="
+                            --bs-btn-padding-y: 0.20rem; --bs-btn-padding-x: 5rem;
+                            --bs-btn-font-size: 1rem;"
+                        id="logar">Entrar</button>
+                </div>
+
+            </form>
+        </div>
+        <!-- cadastro -->
+        <div class="tab-pane fade" id="pills-profile" role="tabpanel"
+            aria-labelledby="pills-profile-tab" tabindex="0">
+            <!-- Cadastro -->
+            <form>
+
+                <label for="name" class="form-label">Nome</label>
+                <input type="nome" class="form-control"
+                    id="email" aria-describedby="nomeHelp">
+                <div id="nomeHelp" class="form-text">Como devemos te
+                    chamar?</div>
+
+                <div class="mb-3">
+                    <label for="email"
+                        class="form-label">Email</label>
+                    <input type="email" class="form-control"
+                        id="email" aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text">Não
+                        compartilharemos
+                        seu email sem sua autorização.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="idade"
+                        class="form-label">Idade</label>
+                    <input type="number" class="form-control"
+                        id="idade">
+
                 </div>
                 <div class="mb-3">
                     <label for="password"
@@ -34,35 +136,56 @@
                     <input type="password" class="form-control"
                         id="password">
                 </div>
-                <div class="mb-3 form-check">
-                    <input type="checkbox"
-                        class="form-check-input text-warning"
-                        id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Manter
-                        conectado?</label>
+                <div class="mb-3">
+                    <label for="password"
+                        class="form-label">Confirmar Senha</label>
+                    <input type="password" class="form-control"
+                        id="password">
                 </div>
-                <div class="d-flex justify-content-center pb-2">
+                <div class="d-grid gap-2">
+                    <button class="btn btn-primary color-btn"
+                        type="button">Cadastrar</button>
 
-                    <button type="submit"
-                        class="btn btn-primary btn-lg" style="
-                        --bs-btn-padding-y: 0.20rem; --bs-btn-padding-x: 5rem;
-                        --bs-btn-font-size: 1rem;"
-                        id="logar">Entrar</button>
-                </div>
-                <div class="cadastro_novo d-flex justify-content-center">
-                    <button type="submit"
-                        class="btn btn-secondary"
-                        style="
-                        --bs-btn-padding-y: 0.20rem; --bs-btn-padding-x: 4.2rem;
-                        --bs-btn-font-size: 1rem;"
-                        id="cadastrar">Cadastrar</button>
                 </div>
 
             </form>
 
         </div>
-        <!-- -----------------------teste reset -->
+        <!-- Reset Senha -->
 
-        <script src="./scripts/app.js"></script>
-    </body>
-</html>
+        <div class="tab-pane fade" id="pills-contact" role="tabpanel"
+            aria-labelledby="pills-reset-tab" tabindex="0">
+
+            <form">
+                <div class="mb-3"></div>
+
+                <label for="email"
+                    class="form-label">Email</label>
+
+                <input type="email" class="form-control"
+                    id="email" aria-describedby="emailHelp">
+
+                <div id="emailHelp" class="form-text">Não compartilharemos
+                    seu email sem sua autorização.</div>
+
+                <button type="button"
+                    class="btn btn-primary btn-lg mb-3" style="
+                        --bs-btn-padding-y: 0.20rem; --bs-btn-padding-x: 5rem;
+                        --bs-btn-font-size: 1rem;"
+                    id="logar">Recuperar</button>
+
+            </form>
+
+        </div>
+
+    </div>
+    <!-- Fim teste -->
+
+    <!-- ============================= -->
+
+   
+
+                    <script src="./scripts/app.js"></script>
+
+                </body>
+            </html>
