--- a/pages/app.html
+++ b/pages/app.html
@@ -55,6 +55,14 @@
                                                     placeholder="Digite a glicemia">
                                             </div>
 
+                                            <div class="mb-3"></div>
+
+                                            <label for="data-da-afericao"
+                                                class="form-label">Data</label>
+                                            <input type="date"
+                                                class="form-control"
+                                                id="data-da-afericao">
+
                                             <!-- Botão de cadastro de glicemia -->
                                             <div class="mb-3">
                                                 <button type="button"
@@ -78,7 +86,7 @@
                                             <div class="mb-3">
                                                 <label for="alturaInput"
                                                     class="form-label">Altura
-                                                    (m)</label>
+                                                    (cm)</label>
                                                 <input type="number" step="0.01"
                                                     class="form-control"
                                                     id="alturaInput"
@@ -103,7 +111,7 @@
                                             <!-- Valores da glicemia e IMC aparecerão aqui -->
                                             <p><strong>Glicemia:</strong> <span
                                                     id="valorGlicemia">--</span>
-                                                mg/dL</p>
+                                            </p>
                                             <p><strong>IMC:</strong> <span
                                                     id="valorIMC">--</span></p>
                                             <p><strong>Classificação do
